--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title></title>
   </head>
   <body>
-    <nav class="navbar navbar-nav navbar-fixed-top">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container-fluid">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -41,7 +41,11 @@
   <!-- add text over the video -->
      <div class="title">
          <h1 style="font-size:7vw;">Hello There!</h1>
-     </div>
+
+
+    <!-- button -->
+       <button type="button" class="btn btn-default"> Learn More </button>
+    </div>
 
   </body>
 </html>
