--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title></title>
   </head>
   <body>
+    <!-- Navbar menu -->
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container-fluid">
           <div class="navbar-header">
